--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with(model: post, class: "form") do |form| %>
   <% if post.errors.any? %>
     <div class="error-messages">
+      <i class="fas fa-exclamation-circle"></i>
       <h2><%= pluralize(post.errors.count, "error") %> prevented this post from being saved:</h2>
       <ul>
         <% post.errors.each do |error| %>
@@ -12,16 +13,21 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title, placeholder: "Enter your post title" %>
+    <%= form.text_field :title, placeholder: "Enter an engaging title...", autofocus: true %>
   </div>
 
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content, placeholder: "Write your post content here..." %>
+    <%= form.text_area :content, placeholder: "Write your thoughts here...", rows: 12 %>
   </div>
 
   <div class="actions">
-    <%= form.submit class: "button" %>
-    <%= link_to "Cancel", posts_path, class: "button" %>
+    <%= form.button class: "button" do %>
+      <i class="fas fa-save"></i> <%= post.new_record? ? "Create Post" : "Update Post" %>
+    <% end %>
+    
+    <%= link_to posts_path, class: "button secondary" do %>
+      <i class="fas fa-times"></i> Cancel
+    <% end %>
   </div>
 <% end %>
