--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,19 @@
 <% content_for :title, @post.title %>
 
-<article class="post">
+<div class="page-header">
+  <h2><i class="fas fa-file-alt"></i> Post Details</h2>
+  <%= link_to posts_path, class: "button secondary" do %>
+    <i class="fas fa-arrow-left"></i> Back to Posts
+  <% end %>
+</div>
+
+<article class="post single-post">
   <h2><%= @post.title %></h2>
   
   <div class="post-meta">
-    Posted <%= time_ago_in_words(@post.created_at) %> ago
+    <span><i class="far fa-calendar-alt"></i> Posted <%= time_ago_in_words(@post.created_at) %> ago</span>
     <% if @post.updated_at != @post.created_at %>
-      (Updated <%= time_ago_in_words(@post.updated_at) %> ago)
+      <span><i class="fas fa-edit"></i> Updated <%= time_ago_in_words(@post.updated_at) %> ago</span>
     <% end %>
   </div>
 
@@ -15,11 +22,14 @@
   </div>
 
   <div class="post-actions">
-    <%= link_to "Edit Post", edit_post_path(@post), class: "button" %>
-    <%= link_to "Back to Posts", posts_path, class: "button" %>
-    <%= button_to "Delete Post", @post, method: :delete, class: "button delete", 
-                  form: { style: 'display: inline-block' },
-                  data: { confirm: "Are you sure you want to delete this post?" } %>
+    <%= link_to edit_post_path(@post), class: "button" do %>
+      <i class="fas fa-pencil-alt"></i> Edit Post
+    <% end %>
+    
+    <%= button_to @post, method: :delete, class: "button delete", 
+                form: { style: 'display: inline-block' },
+                data: { turbo_confirm: "Are you sure you want to delete this post?" } do %>
+      <i class="fas fa-trash-alt"></i> Delete Post
+    <% end %>
   </div>
 </article>
-
