--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, "Simple Blog - Latest Posts" %>
 
 <div class="page-header">
-  <h2><i class="fas fa-newspaper"></i> Latest Posts</h2>
+  <h1><i class="fas fa-newspaper"></i> Posts</h1>
   <%= link_to new_post_path, class: "button" do %>
-    <i class="fas fa-plus"></i> Write New Post
+    <i class="fas fa-plus"></i> New post
   <% end %>
 </div>
 
