--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 <div class="page-header">
   <h2><i class="fas fa-file-alt"></i> Post Details</h2>
   <%= link_to posts_path, class: "button secondary" do %>
-    <i class="fas fa-arrow-left"></i> Back to Posts
+    <i class="fas fa-arrow-left"></i> Back
   <% end %>
 </div>
 
@@ -23,13 +23,11 @@
 
   <div class="post-actions">
     <%= link_to edit_post_path(@post), class: "button" do %>
-      <i class="fas fa-pencil-alt"></i> Edit Post
+      <i class="fas fa-pencil-alt"></i> Edit this post
     <% end %>
     
-    <%= button_to @post, method: :delete, class: "button delete", 
-                form: { style: 'display: inline-block' },
-                data: { turbo_confirm: "Are you sure you want to delete this post?" } do %>
-      <i class="fas fa-trash-alt"></i> Delete Post
+    <%= link_to @post, class: "button delete", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this post?" } do %>
+      <i class="fas fa-trash-alt"></i> Destroy this post
     <% end %>
   </div>
 </article>
